Fixed right arm being uneven.

--- a/androidHTML/android.css
+++ b/androidHTML/android.css
@@ -103,6 +103,7 @@ html {
 #r_arm {
   position: inherit;
   left: 205px;
+  top: -5px;
 }
 
 #l_leg, #r_leg {
